Translation of the Spanish user manual

--- a/doc/usermanual/po/es.po
+++ b/doc/usermanual/po/es.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: darktable 2.6\n"
 "POT-Creation-Date: 2019-04-22 22:46-0500\n"
-"PO-Revision-Date: 2019-05-05 19:10-0500\n"
+"PO-Revision-Date: 2019-05-05 19:37-0500\n"
 "Last-Translator: Edgar Lux <edgarlux@disroot.org>\n"
 "Language-Team: Edgar Lux\n"
 "Language: es\n"
@@ -15623,7 +15623,6 @@ msgid "A ctrl-alt-click on a segment will change it to a line segment."
 msgstr "Usar Ctrl+Alt+clic en un segmento lo cambiará a un segmento de línea."
 
 #: ../build/doc/usermanual/po/darktable-usermanual_profiled.xml:14239(para)
-#, fuzzy
 msgid ""
 "It is possible to change the way the points of the curve are linked together by using ctrl-"
 "click on the center. There are four modes which correspond to different ways of handling "
@@ -15640,17 +15639,21 @@ msgid ""
 "moved together. This mode is depicted by a square symbol in the node center. </entry></"
 "row></tbody></tgroup></informaltable>"
 msgstr ""
-"La vista de diapositivas está en sus primeras etapas de desarrollo con un juego de "
-"características básicas. <informaltable frame=\"none\" width=\"80%\"><tgroup cols=\"2\" "
-"colsep=\"0\" rowsep=\"0\"><colspec colwidth=\"1*\"/><colspec colwidth=\"3*\"/"
-"><tbody><row><entry><emphasis>click izquierdo</emphasis></entry><entry> cambia a la "
-"siguiente imagen de la colección </entry></row><row><entry><emphasis>click derecho</"
-"emphasis></entry><entry> cambia a la imagen anterior de la colección </entry></"
-"row><row><entry><emphasis>espacio</emphasis></entry><entry> inicia y detiene el modo de "
-"auto-avance en el cual las imágenes se cambian automáticamente cada cinco segundo y al "
-"llegar a la última se repite desde el inicio </entry></row><row><entry><emphasis>ESC</"
-"emphasis></entry><entry> sale el modo de diapositivas y regresa a la vista de mesa de luz "
-"</entry></row></tbody></tgroup></informaltable>"
+"Es posible cambiar la forma en que los puntos de la curva están vinculados entre sí "
+"mediante Ctrl+clic en el centro. Hay cuatro modos que corresponden a diferentes formas de "
+"manejar la inclinación de la curva Bezier mediante los controles: <informaltable frame="
+"\"none\" width=\"80%\"><tgroup cols=\"3\" colsep=\"0\" rowsep=\"0\"><colspec colwidth=\"4*"
+"\"/><colspec colwidth=\"6*\"/><tbody><row><entry><emphasis>suavizado automático</"
+"emphasis></entry><entry> Este es el modo predeterminado en el que los controles no se "
+"muestran, ya que se calculan automáticamente para dar siempre una curva suave. </entry></"
+"row><row><entry><emphasis>cúspide</emphasis></entry><entry> Los controles pueden manejarse "
+"de forma independiente. Este modo se representa mediante un símbolo de triángulo en el "
+"centro del nodo. </entry></row><row><entry><emphasis>suavizado</emphasis></entry><entry> "
+"Los controles siempre dan una curva suave. Este modo está representado por un símbolo de "
+"diamante en el centro del nodo. </entry><entry/></row><row><entry><emphasis>simétrico</"
+"emphasis></entry><entry> Los controles siempre se mueven juntos. Este modo está "
+"representado por un símbolo cuadrado en el centro del nodo. </entry></row></tbody></"
+"tgroup></informaltable>"
 
 #: ../build/doc/usermanual/po/darktable-usermanual_profiled.xml:14292(title)
 msgid "node edit tool"
@@ -16099,7 +16102,6 @@ msgstr ""
 "desplegable aún abierto – solo escriba sus propios valores."
 
 #: ../build/doc/usermanual/po/darktable-usermanual_profiled.xml:14687(para)
-#, fuzzy
 msgid ""
 "If your system's lensfun library has no correction profile for the automatically "
 "identified camera/lens combination the controls for the three photometric parameters are "
@@ -16114,16 +16116,19 @@ msgid ""
 "lensfun.sourceforge.net/\">lensfun's home page</ulink> and learn how to generate your own "
 "set of correction parameters. Don't forget to share your profile with the lensfun team!"
 msgstr ""
-"Si la librería lensfun de su sistema no tiene un perfil de corrección para la combinación "
-"de cámara/lente identificada automáticamente, los controles de los tres parámetros "
-"fotométricos no se mostrarán, y en cambio, obtendrá un mensaje de advertencia. Quizás "
-"quiera intentar buscar el perfil correcto usted mismo utilizando el menú. Si no hay un "
-"perfil que se ajuste a su lente, por favor visite <ulink url=\"http://www.darktable."
-"org/2013/07/have-your-lens-calibrated/\">este servicio de calibración de lentes</ulink> "
-"ofrecido por Torsten Bronger, uno de los usuarios de darktable. Alternativamente, quizás "
-"quiera ir a la <ulink url=\"http://lensfun.berlios.de\">página oficial de lensfun</ulink> "
-"y aprender sobre como generar su propio juego de parámetros de corrección. No olvide "
-"compartir su perfil con el equipo de lensfun!"
+"Si la librería de lensfun del sistema no tiene un perfil de corrección para la combinación "
+"de cámara/lente identificada automáticamente, los controles para los tres parámetros "
+"fotométricos no se mostrarán, y en su lugar aparecera un mensaje de advertencia. Puede "
+"intentar encontrar el perfil correcto buscándolo en el menú. Si no puede encontrarlo, "
+"verifique si está en la <ulink url=\"http://lensfun.sourceforge.net/lenslist/\">lista de "
+"lentes actualmente compatibles</ulink>, y consulte <ulink url=\"http://lensfun.sourceforge."
+"net/manual/lensfun-update-data.html\">herramienta lensfun-update-data</ulink>. Si no hay "
+"un perfil coincidente para su lente, visite <ulink url=\"https://www.darktable.org/2013/07/"
+"have-your-lens-calibrated/\">este servicio de calibración de lentes</ulink> ofrecido por "
+"Torsten Bronger, uno de los usuarios de darktable. Alternativamente, puede ir a la <ulink "
+"url=\"http://lensfun.sourceforge.net/\"> página de inicio de lensfun</ulink> y aprender a "
+"generar su propio conjunto de parámetros de corrección. Recuerde compartir su perfil con "
+"el equipo de lensfun."
 
 #: ../build/doc/usermanual/po/darktable-usermanual_profiled.xml:14705(title)
 msgid "corrections"
@@ -19932,7 +19937,6 @@ msgstr ""
 "página menos los bordes) no llenada por la imagen."
 
 #: ../build/doc/usermanual/po/darktable-usermanual_profiled.xml:19552(para)
-#, fuzzy
 msgid ""
 "On the left side you find the <emphasis>collect images</emphasis> panel which is described "
 "in more detail in <xref linkend=\"collect_images\"/>. This panel lets you define which "
@@ -19943,14 +19947,14 @@ msgid ""
 "filmstrip image under the pointer, respectively (see <xref linkend=\"image_information\"/"
 ">)."
 msgstr ""
-"A su izquierda encontrará el panel de <emphasis>recolectar imágenes</emphasis> el cual se "
-"describe con mayor detalle en <xref linkend=\"collect_images\"/>. Este panel le permite "
-"definir que imagenes están presentes en la sesión. La visibilidad de la sesión – ubicada "
-"en el panel inferior – se activa al presionar <emphasis>ctrl-f</emphasis> (ver <xref "
-"linkend=\"filmstrip_overview\"/>). En el lado izquierdo también tiene el panel de "
-"<emphasis>información de imagen</emphasis> el cual muestra datos EXIF útiles en el área "
-"central, o la imagen de la sesión marcada por el puntero del ratón, respectivamente (ver "
-"<xref linkend=\"image_information\"/>)."
+"En el lado izquierdo, se encuentra el panel <emphasis>recolectar imágenes</emphasis> que "
+"se describe con más detalle en <xref linkend=\"collect_images\"/>. Este panel le permite "
+"definir qué imágenes están presentes en la tira de imágenes. Ubicada en el panel inferior, "
+"la visibilidad de la tira de imágenes se alterna combinando <emphasis>Ctrl+F</emphasis> "
+"(consulte <xref linkend=\"filmstrip_overview\"/>). En el lado izquierdo también tiene un "
+"panel <emphasis>información de la imagen</emphasis> que muestra datos Exif útiles de la "
+"imagen en el área central, o la imagen de la tira de imágenes debajo del puntero, "
+"respectivamente (consulte <xref linkend=\"image_information\"/>)."
 
 #: ../build/doc/usermanual/po/darktable-usermanual_profiled.xml:19563(para)
 msgid ""
