--- a/po/es.po
+++ b/po/es.po
@@ -803,7 +803,7 @@ msgstr "Como máximo PPG (aceptable)"
 #: ../build/src/preferences_gen.h:3442
 msgctxt "preferences"
 msgid "full (possibly slow)"
-msgstr "Completo (posiblemente lento)"
+msgstr "Modo completo (posiblemente lento)"
 
 #: ../build/src/preferences_gen.h:3460
 msgid ""
@@ -814,9 +814,9 @@ msgid ""
 msgstr ""
 "Indica la interpolación cromática usada, cuando en el modo de cuarto oscuro "
 "no está en escala 1:1: bilineal es más rápido, pero sin tanta nitidez. La "
-"opción intermedia utiliza PPG + el que se elija en la opción de abajo. El "
-"completo usará las propiedades especificadas para exportar en tamaño "
-"completo. Los sensores X-trans usan VNG en vez de PPG."
+"opción intermedia utiliza PPG + el que se elija en la opción de abajo. El modo"
+"completo tomará los valores desde la configuración de exportación para "
+"el tamaño final. Los sensores X-trans usan VNG en vez de PPG."
 
 #: ../build/src/preferences_gen.h:3468
 msgid "pixel interpolator"
@@ -2341,7 +2341,7 @@ msgid "do you really want to physically delete %d selected image from disk?"
 msgid_plural ""
 "do you really want to physically delete %d selected images from disk?"
 msgstr[0] "¿Desea borrar FÍSICAMENTE del disco %d imagen seleccionada?"
-msgstr[1] "¿Desea borrar FISICAMENTE del disco %d imágenes seleccionadas?"
+msgstr[1] "¿Desea borrar FÍSICAMENTE del disco %d imágenes seleccionadas?"
 
 #: ../src/control/jobs/control_jobs.c:1604
 msgid "trash images?"
@@ -10951,11 +10951,11 @@ msgid "mask blending : isolated subjects"
 msgstr "fusión de máscara : sujetos aislados"
 
 #: ../src/iop/toneequal.c:466
-msgid "compress shadows/highlights : soft"
+msgid "compress shadows/highlights : soft"
 msgstr "compresión de sombras/luces : tenue"
 
 #: ../src/iop/toneequal.c:485
-msgid "compress shadows/highlights : strong"
+msgid "compress shadows/highlights : strong"
 msgstr "compresión de sombras/luces : intenso"
 
 #: ../src/iop/toneequal.c:504
